- INTERMediatorOnPage.additionalExpandingEnclosureFinish and INTERMediatorOnPage.additionalExpandingRecordFinish
  are supported. These are programmable interfaces associated with 'post-enclosure' and 'post-repeater' in a context.
- DataConverter_MySQLDateTime class supports 'YYYY.MM.DD' date format.
- [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
  The affected version is 4.3 only (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in additionalCondition with FileMaker Server.
  The affected versions are 3.11, 4.0, 4.1, 4.2 and 4.3 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix not to show the error message (message id: 1024) when updating data using Safari (version 4.3 only).
- [BUG FIX] Fix an error in "Master-Detail Style Page" Sample for PostgreSQL (version 4.3 only).
- [BUG FIX] Fix updating data when uploading a file and specifying the 'field' key and not specifying the 'context' 
  key in the 'file-upload' key of the definition file.
- [BUG FIX] Avoid an error in getValueFromIMNode() of INTER-Mediator-Lib.js if the parameter is null.
- [BUG FIX] Fix handling the 'maxrecords' key and INTERMediator.pagedSize.
- [BUG FIX] The JS program of the Sample_chat has been modified.
- [BUG FIX] Fix not to show the error message ("currentRecord is null - EXCEPTION-25") when using the PostOnlyContext 
  and the related context is exisiting.
- [BUG FIX] Fix not to show the error message ("curVal.replace is not a function - EXCEPTION-27") in 
  IMLibElement.setValueToIMNode() if the element of the parameter is a textarea element and the value is false.
- [BUG FIX] Fix not to show the dialog message when the value of the Local Context is updated.
- [WARNING] The JavaScript code editor "codemirror" isn't temporally supported for the updated version doesn't work fine.

Ver.4.3 (2014/4/7)